--- a/styles.css
+++ b/styles.css
@@ -122,6 +122,10 @@ body {
         padding: 5px;
         background-size: cover;
     }
+    .second-container {
+        flex-direction: column;
+        align-items: center;
+    }
     
     
     input#city {
